@@ -63,10 +63,12 @@ char *dln_argv0;
 char *getenv();
 #endif
 
-static char *dln_find_1(const char *fname, const char *path, char *buf, size_t size, int exe_flag);
+static char *dln_find_1(const char *fname, const char *path, char *buf, size_t size, int exe_flag
+			DLN_FIND_EXTRA_ARG_DECL);
 
 char *
-dln_find_exe_r(const char *fname, const char *path, char *buf, size_t size)
+dln_find_exe_r(const char *fname, const char *path, char *buf, size_t size
+	       DLN_FIND_EXTRA_ARG_DECL)
 {
     char *envpath = 0;
 
@@ -82,21 +84,23 @@ dln_find_exe_r(const char *fname, const char *path, char *buf, size_t size)
 	path = "/usr/local/bin:/usr/ucb:/usr/bin:/bin:.";
 #endif
     }
-    buf = dln_find_1(fname, path, buf, size, 1);
+    buf = dln_find_1(fname, path, buf, size, 1 DLN_FIND_EXTRA_ARG);
     if (envpath) free(envpath);
     return buf;
 }
 
 char *
-dln_find_file_r(const char *fname, const char *path, char *buf, size_t size)
+dln_find_file_r(const char *fname, const char *path, char *buf, size_t size
+		DLN_FIND_EXTRA_ARG_DECL)
 {
     if (!path) path = ".";
-    return dln_find_1(fname, path, buf, size, 0);
+    return dln_find_1(fname, path, buf, size, 0 DLN_FIND_EXTRA_ARG);
 }
 
 static char *
 dln_find_1(const char *fname, const char *path, char *fbuf, size_t size,
-	   int exe_flag /* non 0 if looking for executable. */)
+	   int exe_flag /* non 0 if looking for executable. */
+	   DLN_FIND_EXTRA_ARG_DECL)
 {
     register const char *dp;
     register const char *ep;
